AUTOMAKE_OPTIONS=foreign
bin_PROGRAMS=first second third
first_SOURCES=src/file_transfer_first.cpp
second_SOURCES=src/file_transfer_second.cpp
third_SOURCES=src/file_transfer_third.cpp
first_LDADD=-lmuduo_net -lmuduo_base -lpthread
second_LDADD=-lmuduo_net -lmuduo_base -lpthread
third_LDADD=-lmuduo_net -lmuduo_base -lpthread
CXXFLAGS=-std=c++11
