#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(FileProject, 1.0, jie-email@jie-trancender.org)
AC_CONFIG_SRCDIR([src/file_transfer_first.cpp])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(FileProject, 1.0)

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

# Checks for library functions.

AC_OUTPUT
AC_OUTPUT([Makefile])
