AUTOMAKE_OPTIONS=foreign
bin_PROGRAMS=one two three four five six seven
one_SOURCES=src/one.cpp
two_SOURCES=src/two.cpp
three_SOURCES=src/three.cpp
four_SOURCES=src/four.cpp
five_SOURCES=src/five.cpp
six_SOURCES=src/six.cpp
seven_SOURCES=src/seven.cpp

one_LDADD=-lmuduo_net -lmuduo_base -lpthread
two_LDADD=-lmuduo_net -lmuduo_base -lpthread
three_LDADD=-lmuduo_net -lmuduo_base -lpthread
four_LDADD=-lmuduo_net -lmuduo_base -lpthread
five_LDADD=-lmuduo_net -lmuduo_base -lpthread
six_LDADD=-lmuduo_net -lmuduo_base -lpthread
seven_LDADD=-lmuduo_net -lmuduo_base -lpthread

CXXFLAGS=-std=c++11

bindir=./bin
