AUTOMAKE_OPTIONS=foreign
bin_PROGRAMS=main
main_SOURCES=src/main.cpp ../chargen/src/chargen.h ../time/src/daytime.h ../time/src/time.h ../echo/src/echo.h ../chargen/src/chargen.cpp ../time/src/daytime.cpp ../time/src/time.cpp ../echo/src/echo.cpp
main_LDADD=-lmuduo_net -lmuduo_base -lpthread
CXXFLAGS=-std=c++11

