cmake_minimum_required(VERSION 3.5)
PROJECT(PROTOBUF)
set(CMAKE_C_COMPILER g++)
add_compile_options(-std=c++11)
set(SRC_LIST_SERVER server.cpp codec.h codec.cpp dispatcher.h query.pb.h query.pb.cc)
ADD_EXECUTABLE(server ${SRC_LIST_SERVER})
TARGET_LINK_LIBRARIES(server muduo_net)
TARGET_LINK_LIBRARIES(server muduo_base)
TARGET_LINK_LIBRARIES(server pthread)
